--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "reperensiya nga mga buhat",
   "app-menu-search-in-option-culture": "kultura",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "siyensya",
   "app-menu-search-in-option-business": "negosyo",
   "app-menu-filter-by": "filter pinaagi sa",
