--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -197,6 +197,7 @@
   "app-section-library-general": "general",
   "app-section-library-manuscripts": "manuscripts",
   "app-section-library-history": "history",
+  "app-section-library-national-archives": "national archives",
   "app-section-library-philosophy": "philosophy",
   "app-section-library-genealogy": "genealogy",
   "app-section-library-legal": "legal",
