--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "آثار مرجع",
   "app-menu-search-in-option-culture": "فرهنگ",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "علوم پایه",
   "app-menu-search-in-option-business": "کسب و کار",
   "app-menu-filter-by": "محدود شده توسط",
