--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "参考作品",
   "app-menu-search-in-option-culture": "文化",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "科学",
   "app-menu-search-in-option-business": "仕事",
   "app-menu-filter-by": "フィルタリング",
