--- a/app/explore2/assets/i18n/ui/conzept-no.json
+++ b/app/explore2/assets/i18n/ui/conzept-no.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "oppslagsverk",
   "app-menu-search-in-option-culture": "kultur",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "vitenskap",
   "app-menu-search-in-option-business": "virksomhet",
   "app-menu-filter-by": "filtrer etter",
