--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "obras de referência",
   "app-menu-search-in-option-culture": "cultura",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "Ciência",
   "app-menu-search-in-option-business": "negócios",
   "app-menu-filter-by": "filtrar por",
