--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "Referans çalışmaları",
   "app-menu-search-in-option-culture": "kültür",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "bilim",
   "app-menu-search-in-option-business": "işletme",
   "app-menu-filter-by": "tarafından filtre",
