--- a/app/explore2/assets/i18n/ui/conzept-ca.json
+++ b/app/explore2/assets/i18n/ui/conzept-ca.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "obres de referència",
   "app-menu-search-in-option-culture": "cultura",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "ciència",
   "app-menu-search-in-option-business": "negocis",
   "app-menu-filter-by": "filtrar per",
