--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "referenční práce",
   "app-menu-search-in-option-culture": "kultura",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "Věda",
   "app-menu-search-in-option-business": "podnikání",
   "app-menu-filter-by": "filtrovat podle",
