--- a/app/explore2/assets/i18n/ui/conzept-da.json
+++ b/app/explore2/assets/i18n/ui/conzept-da.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "opslagsværker",
   "app-menu-search-in-option-culture": "kultur",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "videnskab",
   "app-menu-search-in-option-business": "forretning",
   "app-menu-filter-by": "Sorter efter",
