--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "la referencia funciona",
   "app-menu-search-in-option-culture": "cultura",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "ciencia",
   "app-menu-search-in-option-business": "negocio",
   "app-menu-filter-by": "filtrado por",
