--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -27,6 +27,7 @@
   "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-search-in-option-culture": "culture",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "science",
   "app-menu-search-in-option-business": "business",
   "app-menu-sort-by-option-relevance-asc": "relevance ↑",
