--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "opere di riferimento",
   "app-menu-search-in-option-culture": "cultura",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "scienza",
   "app-menu-search-in-option-business": "Attività commerciale",
   "app-menu-filter-by": "filtra per",
