--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "참고 작품",
   "app-menu-search-in-option-culture": "문화",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "과학",
   "app-menu-search-in-option-business": "사업",
   "app-menu-filter-by": "필터링 기준",
