--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "справочные работы",
   "app-menu-search-in-option-culture": "культура",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "наука",
   "app-menu-search-in-option-business": "бизнес",
   "app-menu-filter-by": "Сортировать по",
