--- a/app/explore2/assets/i18n/ui/conzept-sw.json
+++ b/app/explore2/assets/i18n/ui/conzept-sw.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "kazi za kumbukumbu",
   "app-menu-search-in-option-culture": "utamaduni",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "sayansi",
   "app-menu-search-in-option-business": "biashara",
   "app-menu-filter-by": "chujio kwa",
