--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -19,6 +19,7 @@
   "app-menu-search-in-option-reference": "довідкові праці",
   "app-menu-search-in-option-culture": "культури",
   "app-menu-search-in-option-species": "species",
+  "app-section-library-national-archives": "national archives",
   "app-menu-search-in-option-science": "наука",
   "app-menu-search-in-option-business": "бізнес",
   "app-menu-filter-by": "фільтрувати за",
