--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -20,6 +20,7 @@
   "app-menu-search-in-option-culture": "Kultur",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "Wissenschaft",
   "app-menu-search-in-option-business": "Geschäft",
   "app-menu-filter-by": "filtern nach",
