--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -234,6 +234,7 @@
   "app-guide-bookmark-books": "books",
   "app-guide-bookmark-related-websites": "related websites",
   "app-guide-bookmark-conceptology": "conceptology",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-guide-see-more": "see more",
   "app-guide-page": "page",
