--- a/app/explore2/assets/i18n/ui/conzept-te.json
+++ b/app/explore2/assets/i18n/ui/conzept-te.json
@@ -20,6 +20,7 @@
   "app-menu-search-in-option-culture": "సంస్కృతి",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "సైన్స్",
   "app-menu-search-in-option-business": "వ్యాపారం",
   "app-menu-filter-by": "ద్వారా వడపోత",
