--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -20,6 +20,7 @@
   "app-menu-search-in-option-culture": "ثقافة",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "علوم",
   "app-menu-search-in-option-business": "عمل",
   "app-menu-filter-by": "مصنف بواسطة",
