--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -28,6 +28,7 @@
   "app-menu-search-in-option-culture": "সংস্কৃতি",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "বিজ্ঞান",
   "app-menu-search-in-option-business": "ব্যবসা",
   "app-menu-sort-by-option-relevance-asc": "প্রাসঙ্গিকতা ↑",
