--- a/app/explore2/assets/i18n/ui/conzept-hi.json
+++ b/app/explore2/assets/i18n/ui/conzept-hi.json
@@ -20,6 +20,7 @@
   "app-menu-search-in-option-culture": "संस्कृति",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "विज्ञान",
   "app-menu-search-in-option-business": "व्यापार",
   "app-menu-filter-by": "फिल्टर के द्वारा",
