--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -20,6 +20,7 @@
   "app-menu-search-in-option-culture": "cultura",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "Ciência",
   "app-menu-search-in-option-business": "negócios",
   "app-menu-filter-by": "filtrar por",
