--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -20,6 +20,7 @@
   "app-menu-search-in-option-culture": "културе",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "Наука",
   "app-menu-search-in-option-business": "посао",
   "app-menu-filter-by": "филтер од",
