--- a/app/explore2/assets/i18n/ui/conzept-sv.json
+++ b/app/explore2/assets/i18n/ui/conzept-sv.json
@@ -20,6 +20,7 @@
   "app-menu-search-in-option-culture": "kultur",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "vetenskap",
   "app-menu-search-in-option-business": "företag",
   "app-menu-filter-by": "filtrera efter",
