--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -20,6 +20,7 @@
   "app-menu-search-in-option-culture": "kültür",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "bilim",
   "app-menu-search-in-option-business": "işletme",
   "app-menu-filter-by": "tarafından filtre",
