--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -20,6 +20,7 @@
   "app-menu-search-in-option-culture": "ثقافت",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "سائنس",
   "app-menu-search-in-option-business": "کاروبار",
   "app-menu-filter-by": "کی طرف سے فلٹر",
