--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -20,6 +20,7 @@
   "app-menu-search-in-option-culture": "văn hoá",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "khoa học",
   "app-menu-search-in-option-business": "việc kinh doanh",
   "app-menu-filter-by": "lọc bởi",
