--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -20,6 +20,7 @@
   "app-menu-search-in-option-culture": "文化",
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
+  "app-guide-bookmark-concept-blend": "concept blend",
   "app-menu-search-in-option-science": "科学",
   "app-menu-search-in-option-business": "商业",
   "app-menu-filter-by": "过滤",
