new datasources: SearchCode

--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -26,6 +26,7 @@
   "app-menu-search-in-option-species": "species",
   "app-menu-search-in-option-business": "business",
   "app-menu-search-in-option-legal": "legal",
+  "app-menu-search-in-option-code": "code",
   "app-menu-search-in-option-news": "news",
   "app-menu-search-in-option-media": "media",
   "app-menu-search-in-option-web": "web",
