--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -21,6 +21,7 @@
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
   "app-guide-bookmark-concept-blend": "concept blend",
+  "app-menu-search-in-option-code": "code",
   "app-menu-search-in-option-science": "siyensya",
   "app-menu-search-in-option-business": "negosyo",
   "app-menu-filter-by": "filter pinaagi sa",
