--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -21,6 +21,7 @@
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
   "app-guide-bookmark-concept-blend": "concept blend",
+  "app-menu-search-in-option-code": "code",
   "app-menu-search-in-option-science": "kimiyya",
   "app-menu-search-in-option-business": "kasuwanci",
   "app-menu-filter-by": "tace by",
