--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -21,6 +21,7 @@
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
   "app-guide-bookmark-concept-blend": "concept blend",
+  "app-menu-search-in-option-code": "code",
   "app-menu-search-in-option-science": "과학",
   "app-menu-search-in-option-business": "사업",
   "app-menu-filter-by": "필터링 기준",
