--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -21,6 +21,7 @@
   "app-menu-search-in-option-species": "species",
   "app-section-library-national-archives": "national archives",
   "app-guide-bookmark-concept-blend": "concept blend",
+  "app-menu-search-in-option-code": "code",
   "app-menu-search-in-option-science": "سائنس",
   "app-menu-search-in-option-business": "کاروبار",
   "app-menu-filter-by": "کی طرف سے فلٹر",
